; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_jobdict.c_ghb_get_job_audio_settings.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_jobdict.c_ghb_get_job_audio_settings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"Audio\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ghb_get_job_audio_settings(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @ghb_get_job_settings(i32* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @ghb_dict_get(i32* %7, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = call i32* (...) @ghb_dict_new()
  store i32* %12, i32** %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @ghb_dict_set(i32* %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32* %14)
  br label %16

16:                                               ; preds = %11, %1
  %17 = load i32*, i32** %4, align 8
  ret i32* %17
}

declare dso_local i32* @ghb_get_job_settings(i32*) #1

declare dso_local i32* @ghb_dict_get(i32*, i8*) #1

declare dso_local i32* @ghb_dict_new(...) #1

declare dso_local i32 @ghb_dict_set(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
